[modify]修改项目依赖

--- a/deployments/Dockerfile
+++ b/deployments/Dockerfile
@@ -14,6 +14,6 @@ ARG DB_PORT
 ENV ENV_HOST=$DB_HOST
 ENV ENV_PORT=$DB_PORT
 WORKDIR  /root/go/src/github.com/LILILIhuahuahua/ustc_tencent_game
-COPY --from=builder  /root/go/src/github.com/LILILIhuahuahua/ustc_tencent_game/dgs .
+COPY --from=builder  /root/go/src/dgs/dgs .
 EXPOSE 8888/udp
 ENTRYPOINT ./dgs -DBProxyHost $ENV_HOST -DBProxyPort $ENV_PORT
