--- a/.github/workflows/tencent.yml
+++ b/.github/workflows/tencent.yml
@@ -13,7 +13,7 @@
 #
 # 3. Change the values for the TKE_IMAGE_URL, TKE_REGION, TKE_CLUSTER_ID and DEPLOYMENT_NAME environment variables (below).
 
-name: CI/CD for dgs
+name: CI/CD
 
 on:
   push:
@@ -46,7 +46,7 @@ jobs:
       # Build
       - name: Build Docker image
         run: |
-          docker build --build-arg DB_HOST=${{ secrets.DB_HOST }} --build-arg DB_PORT=${{ secrets.DB_PORT }} -t ${TKE_IMAGE_URL}:${NAME}-${NAMESPACE}-${GITHUB_SHA} .
+          docker build --build-arg DB_HOST=${{ secrets.DB_HOST }} --build-arg DB_PORT=${{ secrets.DB_PORT }} -t ${TKE_IMAGE_URL}:${NAME}-${NAMESPACE}-${GITHUB_SHA} ./deployments/
 
       - name: Login TKE Registry
         run: |
@@ -77,7 +77,7 @@ jobs:
       - name: Deploy To TKE
         run: |
           ./kustomize edit set image ${TKE_IMAGE_URL}:${NAME}-${NAMESPACE}-${GITHUB_SHA}
-          ./kustomize build . | kubectl apply  -f -
+          ./kustomize build ./deployments/ | kubectl apply  -f -
           kubectl rollout status deployment/${DEPLOYMENT_NAME}
           kubectl get services -o wide
 #          kubectl rollout status deployment/${DEPLOYMENT_NAME} -n=${NAMESPACE}
