--- a/.github/workflows/tencent.yml
+++ b/.github/workflows/tencent.yml
@@ -76,8 +76,7 @@ jobs:
       # Deploy the Docker image to the TKE cluster
       - name: Deploy To TKE
         run: |
-          ./kustomize edit set image ${TKE_IMAGE_URL}:${NAME}-${NAMESPACE}-${GITHUB_SHA}
-          ./kustomize build ./deployments/ | kubectl apply  -f -
+          (cd deployments && ./../kustomize edit set image ${TKE_IMAGE_URL}:${NAME}-${NAMESPACE}-${GITHUB_SHA})
+          (cd deployments && ./../kustomize build . | kubectl apply  -f - )
           kubectl rollout status deployment/${DEPLOYMENT_NAME}
           kubectl get services -o wide
-#          kubectl rollout status deployment/${DEPLOYMENT_NAME} -n=${NAMESPACE}
