--- a/.github/workflows/tencent.yml
+++ b/.github/workflows/tencent.yml
@@ -26,6 +26,7 @@ env:
   TKE_REGION: ap-shanghai
   TKE_CLUSTER_ID: cls-iw9xj6c7
   DEPLOYMENT_NAME: dgs
+  STATEFULSET_NAME: dgs
   NAMESPACE: dev
   NAME: dgs
 
@@ -78,5 +79,5 @@ jobs:
         run: |
           (cd deployments && ./../kustomize edit set image ${TKE_IMAGE_URL}:${NAME}-${NAMESPACE}-${GITHUB_SHA})
           (cd deployments && ./../kustomize build . | kubectl apply  -f - )
-          kubectl rollout status deployment/${DEPLOYMENT_NAME}
+          kubectl rollout status sts/${STATEFULSET_NAME}
           kubectl get services -o wide
